@@ -1074,7 +1074,7 @@
 
 /* Constants */
 #define SPM_PAGESIZE 128
-#define RAMEND       0x3FFF    /* Last On-Chip SRAM Location */
+#define RAMEND       0x40FF    /* Last On-Chip SRAM Location */
 #define XRAMEND      0
 #define E2END        0xFFF
 #define FLASHEND     0x1FFFF
